--- a/app/views/home/login.erb
+++ b/app/views/home/login.erb
@@ -1,10 +1,12 @@
 <div class="container">
-    <h1 align="center">vote_people</h1>
+    <h1 align="center">
+      kangnam's university<br>
+      vote_people</h1>
 <form class="form-horizontal" method="POST" action="/index">
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">학번</label>
     <div class="col-sm-3">
-      <input type="email" class="form-control" id="inputEmail3" placeholder="학번">
+      <input type="text" class="form-control" id="inputEmail3" placeholder="학번">
     </div>
   </div>
   <div class="form-group">
@@ -21,3 +23,4 @@
   </div>
 </form>
 </div>
+
