crud게시판작성

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,16 @@
 <h1>Home#index</h1>
 <h1>홈홈홈</h1>
+<h4>후보자</h4>
+<p>
+<%=@titledata %>
+</p>
+<h4>생년월일</h4>
+<p>
+<%=@contentdata %>
+</p>
+<h4>약력</h4>
+<p>
+<%=@content2data %>
+</p>
 <a href="/register">후보 등록 등록하기</a>
 <a href="/users/sign_out">로그아웃</a>
