--- a/app/views/home/register.html.erb
+++ b/app/views/home/register.html.erb
@@ -1,15 +1,15 @@
 <div class="container"><h1>등록하기</h1>
-<form>
+<form action="/index" method="POST">
   <div class="form-group">
     <label for="exampleInputEmail1">이름</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="이메일을 입력하세요">
+    <input name="title" type="text" class="form-control" id="exampleInputEmail1" placeholder="이름을">
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">생년원일</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="암호">
+    <label for="exampleInputPassword1">생년월일</label>
+    <input name="content" type="text" class="form-control" id="exampleInputPassword1" placeholder="생년월일">
   </div>
   <b>약력</b><br>
-  <textarea class="form-control" rows="3" placeholder="약력을 입력하시오"></textarea><br>
+  <textarea name="content2" class="form-control" rows="3" placeholder="약력을 입력하시오"></textarea><br>
   <button type="submit" class="btn btn-default">제출</button>
 </form>
 </div>
