--- a/app/views/home/register.html.erb
+++ b/app/views/home/register.html.erb
@@ -1,15 +1,16 @@
 <div class="container"><h1>등록하기</h1>
-<form action="/index" method="POST">
+<form action="/home/create" method="POST">
   <div class="form-group">
-    <label for="exampleInputEmail1">이름</label>
-    <input name="title" type="text" class="form-control" id="exampleInputEmail1" placeholder="이름을">
+    <label for="exampleInputEmail1">후보자</label>
+    <input name="input_title" type="text" class="form-control"  placeholder="이름">
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">생년월일</label>
-    <input name="content" type="text" class="form-control" id="exampleInputPassword1" placeholder="생년월일">
+    <label for="exampleInputPassword1">후보자 소개</label>
+    <input name="input_content" type="text" class="form-control"  placeholder="후보자 소개">
   </div>
-  <b>약력</b><br>
-  <textarea name="content2" class="form-control" rows="3" placeholder="약력을 입력하시오"></textarea><br>
+  
   <button type="submit" class="btn btn-default">제출</button>
 </form>
 </div>
+
+    <!--데이터베이스에 조작을 가할 수 있는 폼은 무조건 메소드를 포스트로-->
